View Issue Details

IDProjectCategoryView StatusLast Update
0022941CommunityOCCT:Data Exchangepublic2012-04-16 12:09
ReporterPawel Assigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformAOSL 
Product Version6.5.2 
Target Version6.5.3Fixed in Version6.5.3 
Summary0022941: Memory leak in StepData_StepReaderData.cxx line 1826
Descriptionwhen exiting the method StepData_StepReaderData::SetEntityNumbers the variable indm is not deleted.

Solution add the following line:

delete [] indm;
TagsNo tags attached.
Test case numberTest case is not required

Activities

abv

2012-01-30 19:06

manager   ~0019316

Please replace use pf plain C pointers by use of array classes from TColStd package (use HArray for indx variable)

dbv

2012-02-09 10:34

developer   ~0019480

C pointers have been replaced by array classes from TColStd package

Branch http://svn/svn/occt/branches/OCC22941 is ready to be reviewed.

Dear Andrey,
Please review.

abv

2012-02-09 10:57

manager   ~0019484

No remarks, please test

apn

2012-02-10 15:02

administrator   ~0019509

Dear BugMaster,
  Workbench KAS:dev:mkv-22941-occt was created from SVN branch http://svn/svn/occt/branches/OCC22941
  (and mkv-22941-products from trunk) and compiled on Linux and Windows platforms.
  
  There are not regressions in mkv-22941-products regarding to KAS:dev:products-20120203-opt
  
  See results in /QADisk/occttests/results/KAS/dev/ mkv-22941-products_09022012/lin
  See reference results in /QADisk/occttests/results/KAS/dev/products-20120203-opt_03022012/lin
  See test cases in /QADisk/occttests/tests/ED

bugmaster

2012-02-10 17:26

administrator   ~0019517

Integrated into trunk of occt repository

Date: 2012-02-10 17:08:30 +0400 (Fri, 10 Feb 2012)
New Revision: 10422

Modified:
   trunk/src/StepData/StepData_StepReaderData.cxx

Pawel

2012-04-16 12:09

developer   ~0020388

Verified. Please close.

Related Changesets

occt: master 1d37eeb6

2012-02-10 13:08:30

dbv


Committer: bugmaster Details Diff
0022941: Memory leak in StepData_StepReaderData.cxx line 1826 Affected Issues
0022941
mod - src/StepData/StepData_StepReaderData.cxx Diff File

Issue History

Date Modified Username Field Change
2012-01-30 17:55 Pawel New Issue
2012-01-30 17:55 Pawel Assigned To => gka
2012-01-30 19:06 abv Note Added: 0019316
2012-01-30 19:06 abv Assigned To gka => dbv
2012-01-30 19:06 abv Status new => assigned
2012-02-09 10:34 dbv Note Added: 0019480
2012-02-09 10:34 dbv Assigned To dbv => abv
2012-02-09 10:34 dbv Status assigned => resolved
2012-02-09 10:57 abv Note Added: 0019484
2012-02-09 10:57 abv Assigned To abv => dbv
2012-02-09 10:57 abv Status resolved => reviewed
2012-02-10 15:02 apn Note Added: 0019509
2012-02-10 15:03 apn Test case number => Test case is not required
2012-02-10 15:03 apn Status reviewed => tested
2012-02-10 17:25 bugmaster Target Version => 6.5.3
2012-02-10 17:26 bugmaster Note Added: 0019517
2012-02-10 17:26 bugmaster Status tested => verified
2012-02-10 17:26 bugmaster Resolution open => fixed
2012-03-29 17:26 bugmaster Changeset attached => occt master 1d37eeb6
2012-04-03 13:31 abv Assigned To dbv => Pawel
2012-04-16 12:09 Pawel Assigned To Pawel => bugmaster
2012-04-16 12:09 Pawel Note Added: 0020388