0022941: Memory leak in StepData_StepReaderData.cxx line 1826